--- a/antora.yml
+++ b/antora.yml
@@ -1,7 +1,15 @@
 name: programmer
 version: 1.5
-prerelease: true
 title: Руководство программиста
+asciidoc:
+  attributes:
+    pl-v: '5.5.5'
+    bo-v: '5.5.5'
+    wf-v: '5.5.3'
+    dm-v: '5.5.3'
+    ad-v: '5.5.3'
+    to-v: '5.5.2'
+    win-v: '5.5.4'
 
 nav:
 - modules/ROOT/nav.adoc
