--- a/antora.yml
+++ b/antora.yml
@@ -101,4 +101,4 @@ nav:
 - modules/Workflow/workflow-api.adoc
 - modules/schemas/schemas.adoc
 
-start_page: ROOT:whats-new.adoc
+start_page: ROOT:index.adoc
