Руководство разработчика, программиста звучит слишком просто

--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: programmer
 version: 1.5
-title: Руководство программиста
+title: Руководство разработчика
 asciidoc:
   attributes:
     pl-v: '5.5.5'
