--- a/antora.yml
+++ b/antora.yml
@@ -1,7 +1,7 @@
 name: programmer
 version: 'attorney'
 prerelease: true
-display_version: МЧД
+display_version: 'МЧД'
 title: Руководство разработчика
 asciidoc:
   attributes:
