--- a/antora.yml
+++ b/antora.yml
@@ -1,7 +1,5 @@
 name: programmer
-version: 'm4d'
-prerelease: true
-display_version: 'МЧД'
+version: ~
 title: Руководство разработчика
 asciidoc:
   attributes:
