TSK-4663 -- обратный мерж получился или нет?

--- a/antora.yml
+++ b/antora.yml
@@ -1,5 +1,7 @@
 name: programmer
-version: ~
+version: 'm4d'
+prerelease: true
+display_version: 'МЧД'
 title: Руководство разработчика
 asciidoc:
   attributes:
@@ -12,4 +14,4 @@ asciidoc:
     win-v: '5.5.4'
 
 nav:
-- modules/ROOT/root.adoc
+  - modules/ROOT/root.adoc
