Docsvision 5 в display version, а в url docsvision5

--- a/antora.yml
+++ b/antora.yml
@@ -1,5 +1,6 @@
 name: programmer
-version: "Docsvision 5"
+version: "docsvision5"
+display_version: "Docsvision 5"
 title: Руководство разработчика
 asciidoc:
   attributes:
