Скрыть display_version

--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: programmer
 version: 'GBL-3442'
-display_version: "Docsvision 5"
+#display_version: "Docsvision 5"
 title: Руководство разработчика
 asciidoc:
   attributes:
