Версия в antora.yml

--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: programmer
-version: 'm4d'
-prerelease: true
+version: ~
+prerelease: false
 title: Руководство разработчика
 asciidoc:
   attributes:
