--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: programmer
-version: ~
-prerelease: false
+version: CU2
+prerelease: true
 title: Руководство разработчика
 asciidoc:
   attributes:
