TSK-7617 / GBL-3673 -- DevExpress

--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: programmer
-version: ~
-prerelease: false
+version: 'CU3'
+prerelease: true
 title: Руководство разработчика
 asciidoc:
   attributes:
